Fixes Foundation issue #3575: Height of flex video too large for Vimeo. Black bars show at top and bottom

--- a/less/framework/flex-video.less
+++ b/less/framework/flex-video.less
@@ -12,7 +12,7 @@
   overflow: hidden;
 }
 .flex-video.widescreen {
-  padding-bottom: 57.25%;
+  padding-bottom: 56.34%;
 }
 .flex-video.vimeo {
   padding-top: 0;
